// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`ModalUnstyled when asked to render with children renders with children 1`] = `
<div
  aria-labelledby="dialogTitletestModal"
  aria-modal="true"
  className="absolute z-50 flex flex-col gap-3"
  role="dialog"
>
  <div
    className="border-b border-b-neutral-light-100 dark:border-b-neutral-dark-100 pb-1 flex justify-between"
  >
    <p
      className="text-lg text-dark dark:text-white font-bold"
      id="dialogTitletestModal"
    >
      Test modal
    </p>
    <button
      aria-label="Close modal"
      className="rounded-full p-2 text-black dark:text-white hover:bg-primary-300/90 hover:text-white active:bg-primary-300/80 disabled:bg-primary-300/60 disabled:text-white/40 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none"
      data-test-id="closeModalButtontestModal"
      id="closeModalButtontestModal"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div>
    <div>
      Test modal content
    </div>
  </div>
</div>
`;

exports[`ModalUnstyled when asked to render without children renders without children 1`] = `
<div
  aria-labelledby="dialogTitletestModal"
  aria-modal="true"
  className="absolute z-50 flex flex-col gap-3"
  role="dialog"
>
  <div
    className="border-b border-b-neutral-light-100 dark:border-b-neutral-dark-100 pb-1 flex justify-between"
  >
    <p
      className="text-lg text-dark dark:text-white font-bold"
      id="dialogTitletestModal"
    >
      Test modal
    </p>
    <button
      aria-label="Close modal"
      className="rounded-full p-2 text-black dark:text-white hover:bg-primary-300/90 hover:text-white active:bg-primary-300/80 disabled:bg-primary-300/60 disabled:text-white/40 disabled:cursor-not-allowed focus-visible:ring-4 focus-visible:ring-focus focus:outline-none focus-visible:outline-none"
      data-test-id="closeModalButtontestModal"
      id="closeModalButtontestModal"
      onClick={[MockFunction]}
      type="button"
    >
      <svg
        aria-hidden="true"
        className="w-4 h-4"
        fill="none"
        height="24"
        stroke="currentColor"
        strokeLinecap="round"
        strokeLinejoin="round"
        strokeWidth="2"
        viewBox="0 0 24 24"
        width="24"
        xmlns="http://www.w3.org/2000/svg"
      >
        <path
          d="M18 6 6 18"
        />
        <path
          d="m6 6 12 12"
        />
      </svg>
    </button>
  </div>
  <div />
</div>
`;
